--- a/src/app/components/facilities/edit-dialog/edit-dialog.component.html
+++ b/src/app/components/facilities/edit-dialog/edit-dialog.component.html
@@ -1,20 +1,25 @@
 <h1 mat-dialog-title style="display: flex; justify-content: center;">Edit {{selectedFacility.facilityName}} </h1>
   <hr>
+  <form [formGroup]="facilityForm" (ngSubmit)="saveFacility()" ngNativeValidate>
 <div mat-dialog-content>
-  <form [formGroup]="facilityForm" (ngSubmit)="saveFacility()">
+  
     <mat-form-field class="edit-fields">
-      <input matInput placeholder="Facility Name" formControlName="facilityName" required value="{{selectedFacility.facilityName}}"/>
+      <input matInput placeholder="Facility Name" formControlName="facilityName" required />
     </mat-form-field>
+
     <mat-form-field class="edit-fields">
-      <input matInput placeholder="Short Code" formControlName="shortCode" required value="{{selectedFacility.shortCode}}"/>
+      <input matInput placeholder="Short Code" formControlName="shortCode" required />
     </mat-form-field>
+
     <mat-form-field class="edit-fields">
-      <input matInput placeholder="Facility ID DS" formControlName="idDs"  required value="{{selectedFacility.idDs}}"/>
-    </mat-form-field>    
-      <mat-checkbox color="primary" name="active" ngModel="checked">Active</mat-checkbox>
-  </form>
+      <input matInput placeholder="Facility ID DS" formControlName="idDs"  required />
+    </mat-form-field>
+
+      <mat-checkbox color="primary" name="active" formControlName="activity">Active</mat-checkbox>
+
 </div>
 <div mat-dialog-actions align="center">
-  <button type="submit" mat-dialog-close mat-raised-button color="accent">Save</button>
+  <button type="submit" mat-raised-button color="accent">Save</button>
   <button mat-dialog-close mat-raised-button >Cancel</button>
 </div>
+</form>
