--- a/src/app/components/facilities/new-dialog/new-dialog.component.html
+++ b/src/app/components/facilities/new-dialog/new-dialog.component.html
@@ -1,20 +1,20 @@
 <h1 mat-dialog-title style="display: flex; justify-content: center;"> Add New Facility </h1>
   <hr>
-<div mat-dialog-content>
-  <form fxLayout="column"  fxLayoutAlign="space-around center">
+  <form (ngSubmit)="addFacility()" [formGroup]="newFacility" ngNativeValidate>
+<div mat-dialog-content >  
     <mat-form-field class="edit-fields">
-      <input matInput placeholder="Facility Name" required/>
+      <input matInput placeholder="Facility Name" formControlName="facilityName" required/>
     </mat-form-field>
     <mat-form-field class="edit-fields">
-      <input matInput placeholder="Short Code" required/>
+      <input matInput placeholder="Short Code" formControlName="shortCode" required/>
     </mat-form-field>
     <mat-form-field class="edit-fields">
-      <input matInput placeholder="Facility ID DS" required/>
+      <input matInput placeholder="Facility ID DS" formControlName="idDs" required/>
     </mat-form-field>
-      <mat-checkbox color="primary">Active</mat-checkbox>
-  </form>
+      <mat-checkbox color="primary" formControlName="activity">Active</mat-checkbox> 
 </div>
 <div mat-dialog-actions align="center">
-  <button mat-dialog-close mat-raised-button type="submit" color="accent">Add</button>
+  <button mat-raised-button type="submit" color="accent">Add</button>
   <button mat-dialog-close mat-raised-button >Cancel</button>
 </div>
+</form>
