--- a/src/app/components/facilities/facilities.component.css
+++ b/src/app/components/facilities/facilities.component.css
@@ -19,3 +19,19 @@ table {
     margin: 10px;  
     float: right;
 }
+
+.toolbar{
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+}
+
+.example-spacer {
+    flex: 1 1 auto;
+  }
+
+.log{
+    text-decoration: none;
+    list-style: none;
+    margin: 5px;
+}
