--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -6,25 +6,25 @@
       </mat-card-header>
 
       <mat-card-content>
-        <form class="example-form" [formGroup]="user" ngNativeValidate>
+        <form class="example-form" #f="ngForm" [formGroup]="user" (ngSubmit)="login()" ngNativeValidate>
           <p>Please enter your K9 Username and Password</p>
           <mat-form-field class="example-full-width">
-            <input matInput formControlName="username" placeholder="Username" required/>
+            <input type="email" matInput formControlName="email" placeholder="Email" required/>
           </mat-form-field>
           <mat-form-field class="example-full-width">
             <input matInput formControlName="password" type="password" placeholder="Password" required/>
           </mat-form-field>
 
-          <div>
-            <a href="">Forgot password?</a>
+          <div class="error" *ngIf="f.submitted && isLoginFailed">
+            Login Failed!
           </div>
 
           <br />
-          <button type="submit" mat-raised-button color="primary" (ngSubmit)="login()" class="login-btn" [disabled]="!user.valid">
+          <button type="submit" mat-raised-button color="primary" class="login-btn" [disabled]="!user.valid">
             Login
           </button>
           <div style="padding-top: 5px;">
-            <p>Don't have an account ? <a href="#">Register</a></p>
+            <p>Don't have an account ? <a routerLink="/register">Register</a></p>
           </div>
         </form>
       </mat-card-content>
