--- a/src/app/components/register/register.component.css
+++ b/src/app/components/register/register.component.css
@@ -23,3 +23,16 @@
 button {
   outline: none;
 }
+
+.error{
+  color: brown;
+    font-weight: 500;
+    display: flex;
+    width: 100%;
+    height: 30px;
+    justify-content: center;
+    align-items: center;
+    background: darksalmon;
+    border-radius: 4px;    
+    border: 1px solid;
+}
