--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -59,7 +59,7 @@
         </mat-form-field>
 
         <div class="error" *ngIf="f.submitted && isSignUpFailed">
-          Registration Failed!
+          {{errorMsg}}
         </div>
 
         <br />
