Logout when refresh token expired

--- a/src/app/components/facilities/facilities.component.html
+++ b/src/app/components/facilities/facilities.component.html
@@ -5,6 +5,9 @@
     
   </div>
   <div class="logout">
+    <button mat-flat-button color="accent" (click)="random()" class="log">Random</button>
+  </div>
+  <div class="logout">
     <button mat-flat-button color="accent" (click)="logout()" class="log">Logout</button>
   </div>
 </mat-toolbar>
