--- a/src/app/components/facilities/facilities.component.html
+++ b/src/app/components/facilities/facilities.component.html
@@ -1,69 +1,107 @@
-<mat-toolbar color="accent" class="toolbar"> 
-  <span>CRUD App</span>
-  <span class="example-spacer"></span>
-  <div class="user">
+
+<mat-drawer-container class="example-container" [hasBackdrop]="false" autosize>
+  <mat-drawer #drawer class="example-sidenav" mode="side">    
+    <p>Auto-resizing sidenav</p>
     
-  </div>
-  <div class="logout">
-    <button mat-flat-button color="accent" (click)="random()" class="log">Random</button>
-  </div>
-  <div class="logout">
-    <button mat-flat-button color="accent" (click)="logout()" class="log">Logout</button>
-  </div>
-</mat-toolbar>
-
-<div class="mat-elevation-z8">
-  <button mat-raised-button color="primary" (click)="addDialog()" class="add-btn">Add New Facility</button>
-  <table mat-table [dataSource]="dataSource" class="myTable">
-    <!-- Position Column -->
-    <ng-container matColumnDef="facilityName">
-      <th mat-header-cell *matHeaderCellDef>Facility Name</th>
-      <td mat-cell *matCellDef="let element">{{ element.facilityName }}</td>
-    </ng-container>
-
-    <!-- Name Column -->
-    <ng-container matColumnDef="shortCode">
-      <th mat-header-cell *matHeaderCellDef>Short Code</th>
-      <td mat-cell *matCellDef="let element">{{ element.shortCode }}</td>
-    </ng-container>
-
-    <!-- Weight Column -->
-    <ng-container matColumnDef="idDs">
-      <th mat-header-cell *matHeaderCellDef>Facility ID DS</th>
-      <td mat-cell *matCellDef="let element">{{ element.idDs }}</td>
-    </ng-container>
-
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="activity">
-      <th mat-header-cell *matHeaderCellDef>Activity</th>
-      <td mat-cell *matCellDef="let element">{{ element.activity }}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="edit">
-      <th mat-header-cell *matHeaderCellDef>Edit</th>
-      <td mat-cell *matCellDef="let element">
-        <button (click)="editDialog(element)" mat-raised-button color="accent">Edit</button>
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="delete">
-      <th mat-header-cell *matHeaderCellDef>Delete</th>
-      <td mat-cell *matCellDef="let element">
-        <button
-          mat-raised-button
-          color="warn"
-          (click)="deleteDialog(element)"
-        >
-          Delete
+    <button mat-raised-button>
+      Toggle extra text
+    </button>
+  </mat-drawer>
+  <mat-drawer-content>
+  <div class="example-sidenav-content">    
+    <mat-toolbar color="accent" class="toolbar">
+      <div class="logout">
+        <button type="button" mat-button (click)="drawer.toggle()">
+          <mat-icon aria-hidden="false" aria-label="Example home icon">menu</mat-icon>
         </button>
-      </td>
-    </ng-container>
-    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky:true;"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>    
-  </table>
-  <!-- <mat-paginator
+      </div>
+      <span>CRUD App</span>
+      <span class="example-spacer"></span>
+      <div class="user"></div>
+      
+      <div class="logout">
+        <button mat-flat-button color="accent" (click)="random()" class="log">
+          Random
+        </button>
+      </div>
+      <div class="logout">
+        <button mat-flat-button color="accent" (click)="logout()" class="log">
+          Logout
+        </button>
+      </div>
+    </mat-toolbar>
+    <div class="mat-elevation-z8">
+      <button
+        mat-raised-button
+        color="primary"
+        (click)="addDialog()"
+        class="add-btn"
+      >
+        Add New Facility
+      </button>
+
+      <table mat-table [dataSource]="dataSource" matSort class="myTable">
+        <ng-container matColumnDef="facilityName">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+            Facility Name
+          </th>
+          <td mat-cell *matCellDef="let element">{{ element.facilityName }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="shortCode">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Short Code</th>
+          <td mat-cell *matCellDef="let element">{{ element.shortCode }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="idDs">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+            Facility ID DS
+          </th>
+          <td mat-cell *matCellDef="let element">{{ element.idDs }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="activity">
+          <th mat-header-cell *matHeaderCellDef>Activity</th>
+          <td mat-cell *matCellDef="let element">{{ element.activity }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="edit">
+          <th mat-header-cell *matHeaderCellDef>Edit</th>
+          <td mat-cell *matCellDef="let element">
+            <button
+              (click)="editDialog(element)"
+              mat-raised-button
+              color="accent"
+            >
+              Edit
+            </button>
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="delete">
+          <th mat-header-cell *matHeaderCellDef>Delete</th>
+          <td mat-cell *matCellDef="let element">
+            <button
+              mat-raised-button
+              color="warn"
+              (click)="deleteDialog(element)"
+            >
+              Delete
+            </button>
+          </td>
+        </ng-container>
+        <tr
+          mat-header-row
+          *matHeaderRowDef="displayedColumns; "
+        ></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>      
+      <mat-paginator
     [pageSizeOptions]="[5, 10, 20]"
     [length]="recordCount"
     showFirstLastButtons
-  ></mat-paginator> -->
-</div>
+  ></mat-paginator>
+    </div>
+  </div>
+</mat-drawer-content>
+</mat-drawer-container>
